# rust-ai-trading-platform

./: Cargo.toml  README.md
crates/data-ingestion/: Cargo.toml
crates/data-ingestion/src/: config.rs  lib.rs  polygon.rs  validation.rs  websocket.rs
crates/neural-bridge/: Cargo.toml
crates/neural-bridge/src/: cache.rs  config.rs  lib.rs  models.rs  neuralforecast.rs  prediction.rs
